# Bili_to_MD

./: .gitignore  README.md  example_start.bat  main.py  pyproject.toml
config/: dev.ini  prompt.yml
example/: llm工具调用事例.md  prompt.py
src/: __init__.py  cookie_get.py  data_sync.py  get_bv_info.py  get_favorite.py  get_subtitle.py  reformat_subtitle.py
src/Tools/: bili_tools.py  bili_util.py
