[project]
name = "bilitools-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moviepy>=1.0.3",
    "pandas>=1.3.0",
    "pillow>=8.0.0",
    "pyqt6>=6.0.0",
    "pyyaml>=6.0",
    "qrcode>=7.0.0",
    "requests>=2.25.0",
    "zai-sdk>=0.2.0"
]
